@@ -18,7 +18,7 @@ in
 \fBfilterit\fR is a filter that can be used in \fBdot-qmail\fR(5). It
 expects descriptor 0 to be seekable and reads it to get all email headers.
 It can be used to deliver mail to a Maildir folder, forward mail to an
-address or simply exit with some status when it matches a user-defined
+address or simply exit with some value when it matches a user-defined
 criteria specified on the command line. \fBfilterit\fR can be used to
 decide if you want to deliver to a specific folder, forward to any email
 address, drop or bounce the message. If \fBfilterit\fR is called in
