@@ -145,6 +145,7 @@ Known values for OPTION are:
   [--masquerade] [--antispoof]
   [--routes=smtp|qmtp|static]
   [--cname-lookup]
+  [--setuser-priv]
   [--min-free=M --skipsend --deliverylimit-count=D --deliverylimit-size=S]
   [--rbl=list]
   [--content-filter=c]
@@ -235,6 +236,7 @@ Known values for OPTION are:
   remotefilter   - enable filtering of mails to qmail-remote
   routes         - Perform SMTPROUTE / QMTPROUTE / static routing
   cname-lookup   - Perform CNAME lookup for recipient host in qmail-remote
+  setuser-priv   - Set supplementary groups when run qmail-local
   masquerade     - Allow user to change Mail From when using authenticated smtp
   rbl            - Deploy RBL lookups
   skipsend       - Skip creation of send script
@@ -285,6 +287,8 @@ Known values for OPTION are:
   [--domainlimits]
   [--routes=smtp|qmtp|static]
   [--cname-lookup]
+  [--setuser-priv]
+  [--setuser-priv]
   [--min-free=M --deliverylimit-count=D --deliverylimit-size=S]
   [--logfilter=logfifo]
   [--localfilter --remotefilter]
@@ -331,6 +335,7 @@ Known values for OPTION are:
   remotefilter   - enable filtering of mails to qmail-remote
   routes         - Perform SMTPROUTE / QMTPROUTE / static routing
   cname-lookup   - Perform CNAME lookup for recipient host in qmail-remote
+  setuser-priv   - Set supplementary groups when run qmail-local
   fsync          - Sync files and directories when writing files
   syncdir        - Use BSD style sync semantics for flushing directories
   paranoid       - Paranoid hostaccess check
@@ -361,6 +366,7 @@ Known values for OPTION are:
   [--domainlimits]
   [--routes=smtp|qmtp|static]
   [--cname-lookup]
+  [--setuser-priv]
   [--min-free=M --deliverylimit-count=D --deliverylimit-size=S]
   [--localfilter --remotefilter]
   [--dkverify=dkim|none]
@@ -391,6 +397,7 @@ Known values for OPTION are:
   remotefilter   - enable filtering of mails to qmail-remote
   routes         - Perform SMTPROUTE / QMTPROUTE / static routing
   cname-lookup   - Perform CNAME lookup for recipient host in qmail-remote
+  setuser-priv   - Set supplementary groups when run qmail-local
   fsync          - Sync files and directories when writing files
   syncdir        - Use BSD style sync semantics for flushing directories
   paranoid       - Paranoid hostaccess check
