@@ -1,5 +1,5 @@
 #
-# $Id: svctool.in,v 2.701 2023-09-19 17:27:38+05:30 Cprogrammer Exp mbhangui $
+# $Id: svctool.in,v 2.702 2023-09-20 00:33:12+05:30 Cprogrammer Exp mbhangui $
 #
 
 #
@@ -26,7 +26,7 @@ host=@HOST@
 shared_objects=0
 use_dlmopen=0
 skip_sendmail_check=0
-RCSID="# \$Id: svctool.in,v 2.701 2023-09-19 17:27:38+05:30 Cprogrammer Exp mbhangui $"
+RCSID="# \$Id: svctool.in,v 2.702 2023-09-20 00:33:12+05:30 Cprogrammer Exp mbhangui $"
 
 #
 # End of User Configuration
@@ -69,6 +69,7 @@ Known values for OPTION are:
   [--masquerade] [--antispoof]
   [--routes=smtp|qmtp|static]
   [--cname-lookup]
+  [--setuser-priv]
   [--min-free=M --skipsend --deliverylimit-count=D --deliverylimit-size=S]
   [--rbl=list]
   [--content-filter=c]
@@ -159,6 +160,7 @@ Known values for OPTION are:
   remotefilter   - enable filtering of mails to qmail-remote
   routes         - Perform SMTPROUTE / QMTPROUTE / static routing
   cname-lookup   - Perform CNAME lookup for recipient host in qmail-remote
+  setuser-priv   - Set supplementary groups when run qmail-local
   masquerade     - Allow user to change Mail From when using authenticated smtp
   rbl            - Deploy RBL lookups
   skipsend       - Skip creation of send script
@@ -209,6 +211,7 @@ Known values for OPTION are:
   [--domainlimits]
   [--routes=smtp|qmtp|static]
   [--cname-lookup]
+  [--setuser-priv]
   [--min-free=M --deliverylimit-count=D --deliverylimit-size=S]
   [--logfilter=logfifo]
   [--localfilter --remotefilter]
@@ -255,6 +258,7 @@ Known values for OPTION are:
   remotefilter   - enable filtering of mails to qmail-remote
   routes         - Perform SMTPROUTE / QMTPROUTE / static routing
   cname-lookup   - Perform CNAME lookup for recipient host in qmail-remote
+  setuser-priv   - Set supplementary groups when run qmail-local
   fsync          - Sync files and directories when writing files
   syncdir        - Use BSD style sync semantics for flushing directories
   paranoid       - Paranoid hostaccess check
@@ -285,6 +289,7 @@ Known values for OPTION are:
   [--domainlimits]
   [--routes=smtp|qmtp|static]
   [--cname-lookup]
+  [--setuser-priv]
   [--min-free=M --deliverylimit-count=D --deliverylimit-size=S]
   [--localfilter --remotefilter]
   [--dkverify=dkim|none]
@@ -315,6 +320,7 @@ Known values for OPTION are:
   remotefilter   - enable filtering of mails to qmail-remote
   routes         - Perform SMTPROUTE / QMTPROUTE / static routing
   cname-lookup   - Perform CNAME lookup for recipient host in qmail-remote
+  setuser-priv   - Set supplementary groups when run qmail-local
   fsync          - Sync files and directories when writing files
   syncdir        - Use BSD style sync semantics for flushing directories
   paranoid       - Paranoid hostaccess check
@@ -6784,6 +6790,11 @@ if [ " $enable_cname_lookup" = " " ] ; then
 else
 	> $conf_dir/DISABLE_CNAME_LOOKUP
 fi
+if [ $setuser_privilege -eq 1 ] ; then
+	echo 1 > $conf_dir/SETUSER_PRIVILEGES
+else
+	> $conf_dir/SETUSER_PRIVILEGES
+fi
 if [ ! " $CONTROLDIR" = " " ] ; then
 	echo "$CONTROLDIR" > $conf_dir/CONTROLDIR
 else
@@ -10268,6 +10279,7 @@ qmailqueue="/usr/sbin/qmail-queue"
 qmailsmtpd=$QmailBinPrefix"/sbin/qmail-smtpd"
 envdir_opts="-c"
 updatecerts=0
+setuser_privilege=0
 if [ " $CONTROLDIR" = " " ] ; then
 	cntrldir=$sysconfdir/control
 else
@@ -10561,6 +10573,9 @@ while test $# -gt 0; do
 	;;
 	--cname-lookup)
 	enable_cname_lookup="yes"
+	;;
+	--setuser-priv)
+	setuser_privilege=1
 	;;
 	--odmr)
 	odmr=1
