@@ -29,6 +29,8 @@ Release @version@-@release@ Start 11/09/2023 End --/--/----
     defined
 18. qmail-lspawn.c: New exit code QLX_UIDGID for uid, gid, group setting
     errors
+19. svctool: added --setuser-priv option to make qmail-lspawn set
+    supplementary groups when running qmail-local
 
 * Fri Sep 08 2023 11:58:03 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.4-1.1%{?dist}
 Release 3.0.4-1.1 Start 24/04/2023 End 08/09/2023
